Added bootstrap styles to My tasks page

--- a/public/index.html
+++ b/public/index.html
@@ -2,8 +2,13 @@
   <head>
     <meta charset="UTF-8" />
     <title>Hello React!</title>
+    
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap-theme.min.css">
+    
     <script src="../bower_components/react/react.min.js"></script>
     <script src="../bower_components/react/react-dom.min.js"></script>
+    <script src="../bower_components/react-bootstrap/react-bootstrap.min.js"></script>
     <script src="../bower_components/babel/browser.min.js"></script>
   </head>
   <body>
