--- a/public/index.html
+++ b/public/index.html
@@ -3,8 +3,8 @@
     <meta charset="UTF-8" />
     <title>Hello React!</title>
     
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap-theme.min.css">
+    <link rel="stylesheet" href="../bower_components/bootstrap-css-only/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../bower_components/bootstrap-css-only/css/bootstrap-theme.min.css">
     
     <script src="../bower_components/react/react.min.js"></script>
     <script src="../bower_components/react/react-dom.min.js"></script>
