--- a/public/index.html
+++ b/public/index.html
@@ -6,10 +6,13 @@
     <link rel="stylesheet" href="../bower_components/bootstrap-css-only/css/bootstrap.min.css">
     <link rel="stylesheet" href="../bower_components/bootstrap-css-only/css/bootstrap-theme.min.css">
     
+    <script src="../bower_components/firebase/firebase.js"></script>
     <script src="../bower_components/react/react.min.js"></script>
     <script src="../bower_components/react/react-dom.min.js"></script>
     <script src="../bower_components/react-bootstrap/react-bootstrap.min.js"></script>
     <script src="../bower_components/babel/browser.min.js"></script>
+    <script src="scripts/config.js"></script>
+    <script src="scripts/database.js"></script>
   </head>
   <body>
     <div id="content"></div>
