Added webpacks for the project

--- a/public/index.html
+++ b/public/index.html
@@ -3,19 +3,13 @@
     <meta charset="UTF-8" />
     <title>Hello React!</title>
     
-    <link rel="stylesheet" href="../bower_components/bootstrap-css-only/css/bootstrap.min.css">
-    <link rel="stylesheet" href="../bower_components/bootstrap-css-only/css/bootstrap-theme.min.css">
+    <link rel="stylesheet" href="../node_modules/bootstrap-css-only/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../node_modules/bootstrap-css-only/css/bootstrap-theme.min.css">
     
-    <script src="../bower_components/firebase/firebase.js"></script>
-    <script src="../bower_components/react/react.min.js"></script>
-    <script src="../bower_components/react/react-dom.min.js"></script>
-    <script src="../bower_components/react-bootstrap/react-bootstrap.min.js"></script>
-    <script src="../bower_components/babel/browser.min.js"></script>
-    <script src="scripts/config.js"></script>
-    <script src="scripts/database.js"></script>
+    <script src="../node_modules/firebase/firebase.js"></script>
   </head>
   <body>
     <div id="content"></div>
-    <script type="text/babel" src="scripts/main.js"></script>
+    <script type="text/javascript" src="bin/app.bundle.js"></script>
   </body>
 </html>
